@@ -1,3 +1,6 @@
+HEAD
+	+ Fix EBox::Types::Composite::cmp to store changes when only last type
+	  is modified
 3.2.6
 	+ Show confirmation dialog before upgrading to 3.3
 	+ Fixed general widget packages to avoid error on 'packages to
